# reverSSH

./: .gitignore  LICENSE  README.md  pyproject.toml
reverssh/: __init__.py  client.py  keys.py  netutil.py  private_protocol.py  relay.py  sftp.py  ssh_encoding.py  ssh_messages.py  ssh_packet.py  websocket.py
reverssh/crypto/: __init__.py  chacha.py  curve25519.py  ed25519.py  poly1305.py
scripts/: bootstrap-client.sh
tests/: test_crypto.py  test_encoding.py  test_operator_approval.py  test_sftp.py  test_websocket.py
